--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
 
 *{
     -webkit-box-sizing: border-box;
@@ -2248,10 +2242,10 @@ font-size: 45%;
         display: flex;
         background: #69d2ff;
         
-        position: fixed; /* sticks to the top of the page, regardless of where you scroll */
+        position: fixed; 
         margin-bottom: 60px;
         width: 100%;
-        z-index: 999; /* puts itself on top of all other elements on the page */
+        z-index: 999; 
         padding: 5px 0;
         box-shadow: 1px 1px 10px 1px grey;
     }
@@ -2328,10 +2322,9 @@ font-size: 45%;
     }
     
     #nav-toggle:checked ~ .nav-toggle-label span {
-        background: #fff; /* setting it to the same background as header so it "disappears" */
+        background: #fff; 
     }
     
-    /* transforming the before and after span into an X */
     #nav-toggle:checked ~ .nav-toggle-label span::before {
         -webkit-transform: rotate(45deg);
             -ms-transform: rotate(45deg);
@@ -2352,7 +2345,7 @@ font-size: 45%;
         position: absolute;
         background: #333;
         text-align: right;
-        top: 100%; /* puts itself directly under the preceeding relative positioned element */
+        top: 100%; 
         left: 0;
         width: 100%;
         -webkit-transform: scale(1, 0);
@@ -2360,7 +2353,7 @@ font-size: 45%;
                 transform: scale(1, 0);
         -webkit-transform-origin: top;
             -ms-transform-origin: top;
-                transform-origin: top; /* menu appears from the top instead if center, try and comment this out and see for yourself */
+                transform-origin: top; 
         -webkit-transition: -webkit-transform .4s ease-in-out;
         transition: -webkit-transform .4s ease-in-out;
         -o-transition: transform .4s ease-in-out;
