--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,8 @@ p{
         border: none;
         color: white;
         font-size:  100%;
+        margin: 0;
+        padding: 0;
     }
     
     #navbar > a{
@@ -2166,9 +2168,7 @@ font-size: 45%;
         display: none;
     }
     
-    .flag{
-        width: 10px;
-    }
+    
     .our_pluses__container{
         display: -webkit-box;
         display: -ms-flexbox;
@@ -2671,6 +2671,9 @@ header section span{
         padding-top: 3%;
         
     }
+    .flag{
+        width: 14px;
+    }
     .logo_mobile_plane {
         margin-top: 5px;
     }
@@ -2709,6 +2712,9 @@ header section span{
     .parallax__first-blur{
         width: 60%;
         }
+        .flag{
+            width: 13.5px;
+        }
 }
 @media (max-width: 360px) and (min-width: 310px) {
     .menu_hr{
@@ -2724,6 +2730,9 @@ header section span{
     .parallax {
         padding-top: 98%;
         
+    }
+    .flag{
+        width: 12px;
     }
     header section {
         font-size: 7.5px;
@@ -2752,6 +2761,9 @@ header section span{
     .parallax__first-blur{
         width:50%;
         
+        }
+        .flag{
+            width: 10.7px;
         }
         .parallax__first-blur h3 {
             font-size: 7px;   
