--- a/css/style.css
+++ b/css/style.css
@@ -123,11 +123,15 @@ p{
     padding-left: 1%;
     padding-right: 1%;
     }
+    
     .logo_phone{
         width: 10%;
         margin: 0;
         margin-right: 10px;
         margin-left: 10px;
+    }
+    .phone_left{
+        margin-left: 14px !important;
     }
     input{
         width: 40vw;
