--- a/css/about_us.css
+++ b/css/about_us.css
@@ -5,7 +5,7 @@
     padding-left: 5%;
     padding-right: 5%;
     display: flex;
-
+    flex-direction: column;
     align-items: space-around;
 }
 
